--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles/Contact.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+
     <title>Contact</title>
 </head>
 <body>
