--- a/templates/Machine_learning/ML_Pattern_mining - Copy.html
+++ b/templates/Machine_learning/ML_Pattern_mining - Copy.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'styles/Base_file.css' %}">
     <link rel="stylesheet" href="{% static 'styles/image_style.css' %}">
     <link rel="stylesheet" href="{% static 'styles/text.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+
 </head>
 
 <body>
