--- a/templates/Work_in_progress.html
+++ b/templates/Work_in_progress.html
@@ -3,6 +3,8 @@
 
 <link rel="stylesheet" href="{% static 'styles/image_style.css' %}">
 <link rel="stylesheet" href="{% static 'styles/All_articles.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Global.css' %}">
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -22,6 +24,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <h2>Work in Progress</h2>
+        <img src="{% static 'Images/Work in progress/1.png' %}" class="img-rectangle" alt="Work in progress">
+
     </section>
 
 </div>
