--- a/templates/About me.html
+++ b/templates/About me.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="{% static 'styles/buttons.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'styles/AboutMe.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Global.css' %}">
+<link rel="stylesheet" href="{% static 'styles/hero.css' %}">
 
 
 <!DOCTYPE html>
