--- a/templates/Genetics/IG_Classical_genetics.html
+++ b/templates/Genetics/IG_Classical_genetics.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="{% static 'styles/Base_file.css' %}">
 <link rel="stylesheet" href="{% static 'styles/image_style.css' %}">
 <link rel="stylesheet" href="{% static 'styles/text.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Global.css' %}">
+<link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
